# indicatif

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  deny.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: async-multi-main.rs  basic.rs  cargo.rs  cargowrap.rs  colors.rs  download-continued.rs  download-speed.rs  download.rs  fastbar.rs  finebars.rs  finish_style.rs  iterator.rs  log.rs  long-spinner.rs  morebars.rs  multi-alignment.rs  multi-insert-relative.rs  multi-synced.rs  multi-tree-ext.rs  multi-tree.rs  multi.rs  processing-yarnish.rs  progress-bar.rs  single-synced.rs  single.rs  tokio.rs  tokio_spinner.rs  yarnish.rs
src/: ansistyle.rs  draw_target.rs  format.rs  in_memory.rs  iter.rs  lib.rs  log.rs  multi.rs  multi_bar.rs  multiplex.rs  progress.rs  progress_bar.rs  progress_bar_builder.rs  rayon.rs  state.rs  style.rs  term_like.rs  utils.rs
src/term/: mod.rs  unix.rs  windows.rs
tests/: multi-autodrop.rs  render.rs
