[package]
name = "indicatif"
description = "A progress bar and cli reporting library for Rust"
version = "0.17.3"
keywords = ["cli", "progress", "pb", "colors", "progressbar"]
categories = ["command-line-interface"]
license = "MIT"
repository = "https://github.com/console-rs/indicatif"
documentation = "https://docs.rs/indicatif"
readme = "README.md"
edition = "2018"
exclude = ["screenshots/*"]
rust-version = "1.58"

[dependencies]
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
number_prefix = "0.4"
portable-atomic = "1.0.0"
rayon = { version = "1.1", optional = true }
tokio = { version = "1", optional = true, features = ["io-util"] }
unicode-segmentation = { version = "1", optional = true }
unicode-width = { version = "0.1", optional = true }
vt100 = { version = "0.15.1", optional = true }

[dev-dependencies]
clap = { version = "4", features = ["color", "derive"] }
once_cell = "1"
rand = "0.8"
tokio = { version = "1", features = ["fs", "time", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"

[features]
default = ["unicode-width", "console/unicode-width"]
improved_unicode = ["unicode-segmentation", "unicode-width", "console/unicode-width"]
in_memory = ["vt100"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
